# JCSS

./: README.md
miniSAT_for_Sorting_Networks/: CMakeLists.txt  README_FOR_SORTING_NETWORKS
miniSAT_for_Sorting_Networks/core/: Main.cc  Solver.cc  Solver.h  SolverTypes.h  depend.mk  output.cnf  test.sh  test.txt  test2.sh
miniSAT_for_Sorting_Networks/mtl/: template.mk
miniSAT_for_Sorting_Networks/simp/: SimpSolver.cc  depend.mk  minisat
miniSAT_for_Sorting_Networks/utils/: Options.cc  Options.h  System.cc
prefixes/: README.md
prefixes/BZ/: BZ_10.txt  BZ_11.txt  BZ_12.txt  BZ_13.txt  BZ_14.txt  BZ_15.txt  BZ_16.txt  BZ_17.txt  BZ_18.txt  BZ_19.txt  BZ_20.txt  BZ_5.txt  BZ_6.txt  BZ_7.txt  BZ_8.txt  BZ_9.txt
prefixes/Pb/: pref10_new.txt  pref11_new.txt  pref12_new.txt  pref13_new.txt  pref14_new.txt  pref15_new.txt  pref16_new.txt  pref17_new.txt  pref18_new.txt  pref19_new.txt  pref20_new.txt  pref5_new.txt  pref6_new.txt  pref7_new.txt  pref8_new.txt  pref9_new.txt
prefixes/opt/: pref_opt10.txt  pref_opt11.txt  pref_opt12.txt  pref_opt13.txt  pref_opt14.txt  pref_opt15.txt  pref_opt16.txt  pref_opt17.txt  pref_opt18.txt  pref_opt19.txt  pref_opt20.txt  pref_opt5.txt  pref_opt6.txt  pref_opt7.txt  pref_opt8.txt  pref_opt9.txt
untangle/: README  bz6.txt  pb6.txt  prefix.cpp
